<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WhereAreYou</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="toast_number_is_registered">This number is registered</string>
    <string name="toast_not_supported_google_services">This device is not supported google play services.</string>
    <string name="dialog_progress_default">Please wait...</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_screen_contact">Contacts</string>
    <string name="title_screen_request">Requests</string>
    <string name="title_screen_map">Map</string>
    <string name="title_screen_settings">Settings</string>

    <string name="text_item_menu_map">Map</string>
    <string name="text_item_menu_contacts">Contacts</string>
    <string name="text_item_menu_requests">Requests</string>
    <string name="text_item_menu_settings">Settings</string>
    <string name="text_item_menu_about">About</string>
    <string name="text_item_profile_call">Call</string>
    <string name="text_item_profile_sms">Regular Sms</string>
    <string name="text_item_profile_location">Get Location</string>
    <string name="text_username">Name</string>
    <string name="text_create_account">Create account</string>


    <string name="title_activity_login">Sign in</string>
    <string name="inscription_phone_number">Phone number</string>
    <string name="inscription_change_info">Change Info</string>
    <string name="inscription_register">Register</string>
    <string name="inscription_clear_info">CLEAR INFO</string>
    <string name="inscription_account">Account</string>
    <string name="inscription_profile">Profile</string>
    <string name="inscription_privacy">Privacy</string>
    <string name="inscription_send_location">Send location</string>
    <string name="inscription_chat_translation">Chat Translation</string>
    <string name="inscription_alert_friends_close">Alert when friends close by</string>
    <string name="inscription_alert_distance">Alert distance</string>
    <string name="inscription_m">m</string>
    <string name="inscription_help">Help</string>
    <string name="inscription_how_to">How To</string>
    <string name="content_pin_type">Please type the PIN we sent you in SMS</string>
    <string name="title_pin_type">PIN</string>
    <string name="title_map_position">You</string>
    <string name="title_send_location">Send Location</string>
    <string name="title_new_contact">New Contact</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time_today">Today</string>
    <string name="time_yesterday">Yesterday</string>
    <string name="dialog_button_positive_generic">Yes</string>
    <string name="dialog_button_negative_generic">No</string>
    <string name="dialog_text_approve_contact">Do you want to approve this contact?</string>

    <string name="notification_location_services_title">Did You know?</string>
    <string name="notification_location_services_message">Location services are disabled.\nDo You want to check the settings?</string>

    <!-- Text -->
    <string name="text_button_ok">OK</string>
    <string name="text_button_add">ADD</string>
    <string name="text_button_send">SEND</string>
    <string name="text_button_cancel">CANCEL</string>

    <string name="text_button_register">Register</string>
    <string name="text_button_sign_in">SIGN IN</string>
    <string name="text_button_enter">Enter</string>

    <string name="text_map_position"> it\'s you</string>
    <string name="text_my_profile">My Profile</string>
    <string name="text_contact_status">Contact status : %s</string>

    <!-- Text of empty list -->
    <string name="text_empty_contacts_list">You not have contact</string>>
    <string name="text_empty_request_list">You not have request</string>>

    <!-- Hints -->
    <string name="hint_name">Username</string>
    <string name="hint_mobile">Mobile number</string>
    <string name="hint_email">Email</string>
    <string name="hint_pass">Pass</string>
    <string name="hint_login">Login</string>
    <string name="hint_repass">Repass</string>
    <string name="hint_message_chat">Write a message</string>
    <string name="hint_message">Your Message</string>

    <!-- Dialog items -->
    <string name="item_select_from">Select from Address Book</string>
    <string name="item_enter_mobile_number">Enter mobile number</string>
    <string name="item_cancel">Cancel</string>

    <!-- Notifications -->
    <string name="notis_enter_valid_data">Enter valid data.</string>
    <string name="notis_authorization_incorrect_data">Login or password is not correct.</string>

    <!-- Toast messages -->
    <string name="toast_wrong_email">Enter valid email.</string>
    <string name="toast_wrong_password">Enter valid password.</string>
    <string name="toast_wrong_field">Enter valid %s.</string>
    <string name="toast_wrong_phone">Enter valid phone number.</string>
    <string name="toast_location_is_not_available">Location is not available.</string>
    <string name="toast_passwords_mismatch">Passwords mismatch.</string>
    <string name="toast_unknown_error">Unknown error.</string>
    <string name="toast_contact_was_approve">Contact was approve</string>

    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_request">Request</string>

    <string name="title_create_account">Create account</string>
    <string name="search_title">Search</string>
    <string name="search_hint">search</string>

    <string name="title_activity_test_h">TestH</string>
    <string name="text_address_is_determined">address is determined…</string>
    <string name="toast_empty_text">Empty text</string>
    <string name="toast_location_successfully_sent">Location successfully sent.</string>
    <string name="toast_contact_request_sent">Contact request successfully sent.</string>
    <string name="toast_impossible_to_obtain_location">Impossible to obtain location.</string>
    <string name="toast_no_contacts">No contacts have been added for this user!</string>


    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

</resources>
